# Mudpuppy

./: .gitignore  CMakeLists.txt  README.md
src/: Art.cpp  Art.h  BitBoardUtils.cpp  BitBoardUtils.h  Board.cpp  Board.h  CMakeLists.txt  Move.cpp  Move.h  MoveUtils.cpp  MoveUtils.h  NBoard.cpp  NBoard.h  Perft.cpp  Perft.h  Tests.cpp  Tests.h  main.cpp  main.h
src/engines/: EngineBase.h  EngineMinimax.cpp  EngineMinimax.h  EngineMinimaxBetter.cpp  EngineMinimaxBetter.h  EngineMinimaxV1.cpp  EngineMinimaxV1.h  EngineMinimaxV2.cpp  EngineMinimaxV2.h  EngineMinimaxV3.cpp  EngineMinimaxV3.h  EngineRandom.cpp  EngineRandom.h
src/evaluators/: EvalBase.h  EvalBasicHeuristics.cpp  EvalBasicHeuristics.h  EvalSimpleCount.cpp  EvalSimpleCount.h
src/protocols/: Uci.cpp  Uci.h
src/searchUtils/: Extensions.cpp  Extensions.h  MoveOrderer.cpp  MoveOrderer.h  TimeManagement.cpp  TimeManagement.h  TranspositionTable.cpp  TranspositionTable.h
tests/: CMakeLists.txt
